Follow-up to issue #16861: Miss alignment of fields added by extensions
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@9953 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
@@ -161,6 +161,11 @@ table.typo3-TCEforms .class-main53 {
 	padding: 2px 0px 2px 0px;
 }
 
+table.typo3-TCEforms td.formField-header,
+table.typo3-TCEforms td.formField-field {
+	padding-left: 10px;
+}
+
 table.typo3-TCEforms .formField,
 table.typo3-TCEforms .formField1,
 table.typo3-TCEforms .formField2,
